# Address-Parsing

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README-ARCHITECTURE.md  README.md  create_structure_files.py  make_match_preview.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
address_hackathon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
addresskit/: DeepEDA.py  __init__.py  match.py  match_baseline.py  normalize.py
addresskit/matching/: blocking.py  string_similarity.py
addresskit/preprocessing/: __init__.py  aho_labeler.py  clean_text.py  normalize_and_parse.py  normalize_part.py  postprocess.py  run_normalize.py  weak_labeling.py
addresskit/scoring/: confidence.py
addresskit/submission/: build_submission.py
addresskit/utils/: io.py  seeds.py
configs/: match.yaml  normalize.yaml  pipeline.yaml
data/interim/: left_norm.csv  right_norm.csv
data/processed/: demo_norm.csv  left.csv  left_norm.csv  match.csv  right.csv  right_norm.csv  sample_norm.csv  unmatched_left.csv  unmatched_right.csv
data/raw/: demo.csv  left.csv  right.csv  sample.csv
notebooks/: address_eda.ipynb  preprocessing.ipynb
scripts/: baseline_submission.py  build_submission.py  clean_and_parse.py  compare_train_clean_vs_lowconf.py  eval.py  make_match_preview.py  make_submission.py  make_synthetic_data.py  predict_and_submit.py  predict_textclf.py  run_pipeline.py  score_dataset.py  suspiciousclean.py  train.py  train_baseline.py  train_crf.py  train_textclf.py
tests/: test_match.py  test_normalize.py
(+16 files in other folders)
